<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/registraso"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:background="@drawable/rounded_corner_top_left"
            android:orientation="vertical"
            android:padding="16dp"
            >



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/usuarioor"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/usuarioor"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/usuarioor"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    app:boxBackgroundMode="none"
                    app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    app:boxBackgroundMode="none"
                    app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Aceptarterminos y condiciones"
                android:textSize="15dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/ingreso"
                    android:textColor="@color/white" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">
                        <ImageView
                            android:layout_margin="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/google"/>
                        <ImageView
                            android:layout_margin="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/facebook"/>
                        <ImageView
                            android:layout_margin="10dp"
                            android:layout_width="82dp"
                            android:layout_height="82dp"
                            android:src="@drawable/instagram"/>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="@string/registrate"/>
        </LinearLayout>

</RelativeLayout>
